# fisher-stein

./: README.md  calculate_fisher_matrices.py  pyproject.toml  reorganize_s3_files.py
src/fisher_stein/: fisher_information.py  split_model.py
src/transformer_lm_fim/: __init__.py  fisher_information.py  split_model.py
