[project]
name = "fisher_stein"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dashiell Stander", email = "dash.stander@gmail.com" }
]
dependencies = [
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "datasets>=4.0.0",
    "jupyterlab>=4.4.5",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "polars>=1.31.0",
    "plotnine>=0.15.0",
    "ruff>=0.12.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fisher_stein"]
